[package]
name = "dcf77_decoder"
version = "0.1.0"
authors = [
    "Cristian Eigel <cristian.eigel@esrlabs.com>",
    "Oliver Mueller <oliver.mueller@esrlabs.com>",
    "Michael Zill <michael.zill@gesrlabs.com>",
]
edition = "2018"
description = "DCF 77 Decoder"
documentation = ""
repository = ""
keywords = ["dcf77", "decoder"]
categories = ["no-std", "embedded"]
readme = "README.md"
license = "0BSD"

[dependencies]
stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f405", "usb_fs",
                                "sdio", "sdio-host"] }
ringbuffer = {path = "../ringbuffer"}
heapless = "0.7.5"
panic-rtt-target = {version="0.1.2", features = ["cortex-m"] }
rtt-target = {version= "0.3.1",  features = ["cortex-m"] }
chrono = {version = "0.4.19", default-features=false}
rtcc = "0.2.1"


[dev-dependencies]
usb-device = "0.2"
usbd-serial = "0.1"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
usbd_scsi = "0.1"
usbd_mass_storage = "0.1"
